第二章 添加箭头函数相关内容
翻译完箭头函数相关内容，除了箭头函数不生成新的作用域，（共用arguments也是因为这个），还有箭头函数的几种简写形式，当默认返回值为对象字面
量是应该注意添加括号。

--- a/docs/第2章. ES6 概要.md
+++ b/docs/第2章. ES6 概要.md
@@ -223,3 +223,143 @@ var example = (parameters) => {
 接下来我们深入解释一下和传统函数相比二者的语义上的区别。
 
 ### 词法作用域
+
+在箭头函数的函数体内，`this`,`arguments`,`super`都指向包含箭头函数的作用域，箭头函数本身不产生新的作用域。以如下代码为例，这里有一个名为`timer`的对象，属性`seconds`用以计数，`start`方法用以开始计时，当我们在若干秒后调用`start`方法时，将打印出当前的`seconds`值。
+
+```js
+var timer = {
+  seconds: 0,
+  start() {
+    setInterval(() => {
+      this.seconds++
+    }, 1000)
+  }
+}
+timer.start()
+setTimeout(function () {
+  console.log(timer.seconds)
+}, 3500)
+// <- 3
+```
+
+如果这里我们没用箭头函数而用的是常规的匿名函数，`this`将指向匿名函数本身，在`start`方法开头处，我们也需要使用`var self = this`这样的语法，然后在之后的匿名函数中使用`self`代替`this`，使用箭头函数，我们无需再做这些多余的操作来标注上下文一致，而可以专注于函数本身的代码了。
+
+类似的，ES6中的箭头函数的作用域绑定意味着函数调用不能通过`.call`,`.apply`,`.bind`等改变函数的作用域。这种限制利大于害，它保证了上下文永远保持不变。
+
+我们再来看看下面这个例子，你猜猜，最终打印出的结果是什么：
+
+
+```js
+function puzzle() {
+  return function () {
+    console.log(arguments)
+  }
+}
+puzzle('a', 'b', 'c')(1, 2, 3)
+```
+
+答案是，对常规匿名函数而言，`arguments`指向匿名函数本身，所以此处打印的结果会是1,2,3
+
+作为对比，我们看看下面这个例子，在本例中，箭头函数的作用域指向`puzzle`函数，这次的打印结果会是`a,b,c`,箭头函数的中调用`arguments`其实是`puzzle`函数的`arguments`
+
+前面我们提到过，箭头函数有几种表达形式，但是现在我们看到的例子中，都是完整的箭头函数形式，下面我们看看，箭头函数的其它写法。
+
+### 箭头函数的不同写法
+
+一直以来我们的箭头函数是这样写的：
+
+```js
+var example = (parameters) => {
+  // function body
+}
+```
+
+变种之一是，当只有一个参数时，我们可以省略箭头函数参数中的括号，这样减少了括号的数量，当箭头函数是另外一个函数的方法时，这样对一些人来说是更容易阅读的。
+
+```js
+var double = value => {
+  return value * 2
+}
+```
+
+实践说明，对简单函数来说，箭头函数是常用的（类似上述`double`函数所示），接下来的形式更加简洁，这次我们去除了表征函数体的`{}`，直接写上`value * 2`这样的语句，当这个函数被调用时，这个语句将被调用，并把结果当做返回值返回。`return` 是静默发生的，这里不再需要花括号，不过只能使用单一表达式。
+
+```js
+var double = (value) => value * 2
+```
+
+这里也可以结合上面说的两种简写，而得到更加简洁的形式
+
+```js
+var double = value => value * 2
+```
+
+现在，你对箭头函数有了一定的理解，下面我们结合它的优点，并说明它们在何时会非常有用。
+
+### 箭头函数的优点和使用示例
+
+不过事先得声明一点，我们并不应该盲目的在一切地方采用`ES6`,是否使用新语法的原则是看采用了新语法能否在实质上改善代码的可读性和可维护性。ES6并没有在任何地方比我们一直写的ES5好，过渡对待ES6 并不好。
+
+在一些情况下，箭头函数可能并非最好的工具，比如说，你有一个包含若干行代码的复杂函数，使用`=>`代替`function`关键字可能很难改善你的代码。箭头函数用在简单的代码时是有效的，`function`关键字及相应的语法标准是组成函数表达式的重要部分。
+
+合理的命名和添加作用域能让函数更利于阅读和看明白，箭头函数并不能直接命名，但是却可以通过复制给变量的形式实现间接命名，比如如下代码中，我们把箭头函数赋值给变量 `throwError`，当函数被调用时，值是一段错误，通过追溯我们可以找到报错的箭头函数是`throwError`.
+
+```js
+var throwError = message => {
+  throw new Error(message)
+}
+throwError('this is a warning')
+<- Uncaught Error: this is a warning
+  at throwError
+```
+
+
+当所定义的函数需要采用和外部一样的作用域时，箭头函数是简洁且有效的，这类的定义使得你的函数在一些情况下很简洁，这在某些函数式编程的情况下非常有效，比如我们使用`.map`,`.filter`,`.reduce`时。如下所示
+
+```js
+[1, 2, 3, 4]
+  .map(value => value * 2)
+  .filter(value => value > 2)
+  .forEach(value => console.log(value))
+// <- 4
+// <- 6
+// <- 8
+```
+
+### 箭头函数省写形式返回对象字面量的一些问题
+
+当你想以简洁的形式返回一个对象时，你需要用小括号括起来你想返回的对象。否则，浏览器会把对象的`{}`解析为箭头函数的开始和结束，把里面的内容解析为函数体。
+
+```js
+// 正确的使用形式
+var objectFactory = () => ({ modular: 'es6' })
+```
+
+在下面这个错误示例中，箭头函数把花括号解析为函数体，`number`被解析为`label`,`value`表达式并没有做任何事情，由于我们现在有了函数体，有没有做任何返回值，下述代码的结果就会是`undefined`了。
+
+```js
+[1, 2, 3].map(value => { number: value })
+// <- [undefined, undefined, undefined]
+```
+
+当我们返回的对象字面量不止一个值的时候，浏览器编译器不能正确解析第二个参数，因此会抛出语法错误。
+
+```js
+[1, 2, 3].map(value => { number: value, verified: true })
+// <- SyntaxError
+```
+
+把返回的对象字面量包裹在小括号中能解决这个问题，这样浏览器就可以正确的解析了：
+
+```js
+[1, 2, 3].map(value => ({ number: value, verified: true }))
+/* <- [
+  { number: 1, verified: true },
+  { number: 2, verified: true },
+  { number: 3, verified: true }]
+*/
+```
+
+
+
+
