翻译完成对象解构和函数解构部分
解构其实只是变量赋值的一种语法糖

--- a/docs/第2章. ES6 概要.md
+++ b/docs/第2章. ES6 概要.md
@@ -360,6 +360,249 @@ var objectFactory = () => ({ modular: 'es6' })
 */
 ```
 
+## 分配解构
+
+解构是ES6提供的最灵活和富于表现的特性了。也是最简单的特性之一，它可以按你所需绑定多个变量，并可应用于对象，数组甚至函数参数。我们一个个的来看，先从对象说起吧。
+
+### 对象解构
+
+设想你有一个程序，这个程序中包含一些漫画人物，Bruce Wayne 就是其中之一，现在你想引用描述它的对象中的一个属性，可能你会按下面说的这样做。
+
+```js
+// 描述Bruce Wayne的对象
+var character = {
+  name: 'Bruce',
+  pseudonym: 'Batman',
+  metadata: {
+    age: 34,
+    gender: 'male'
+  },
+  batarang: ['gas pellet', 'bat-mobile control', 'bat-cuffs']
+}
+```
+
+如果你想把一个名为`pseudonym` 的对象指向`character.pseudonym`,你可以写下面这样的ES5代码，这在你想在程序中多次引用这个属性而又不想多敲字符时是很常见的。
+
+```js
+var pseudonym = character.pseudonym
+```
+
+通过结构赋值，语法能看起来更清晰。如下所示，你不再需要写两次`pseudonym`了
+
+```js
+var { pseudonym } = character
+```
+
+如同你可以使用`var`加逗号在同时声明多个变量一样，你同样可以在花括号内通过解构声明多个变量。
+
+```js
+var { pseudonym, name } = character
+```
+
+类似的，你可以混合使用解构和常规的自定义变量，尽管这样写初看起来让人觉得疑惑，但是是否使用还是取决于你所遵循的代码风格中对变量定义的描述。不过，无论怎么说来，解构语法确实表现出了其灵活性。
+
+```js
+var { pseudonym } = character, two = 2
+```
+
+比如说你现在有这样的需求，你想提取出`pseudonym`属性，但是想要把它赋值给变量 `alias`,你可以按照如下方法使用解构，赋予该值以别名（`aliasing`），这里我们取的别名为`alias`,当然你可以取任何你想取的名字。
+
+```js
+var { pseudonym: alias } = character
+console.log(alias)
+// <- 'Batman'
+```
+
+上述代码初看起来可能也没有用ES5语法时那么简洁，但是如果当你把解构用于多层结构时就能体会到它带来的好处了，看下面这个例子。
+
+```js
+var { metadata: { gender } } = character
+```
+
+当然，多层解构也是可以赋予别名的，这样可以方便的更改子层属性的名称：
+
+```js
+var { metadata: { gender: characterGender } } = character
+```
+
+上面描述的场景是很常见的，因为属性值常常位于宿主对象中，尽管`palette.color.code`也具有较好的描述性，`code`这个词可以指代的意义有点太广了，使用别名`colorCode`可以帮助你结合上下文有一个语义更好的值。
+
+在ES5 中，当你调用一个未曾声明的值时，你会得到`undefined`:
+
+```js
+console.log(character.boots)
+// <- undefined
+console.log(character['boots'])
+// <- undefined
+```
+
+使用解构，情况也是类似的，当你声明了一个不存在属性的解构变量，你也会得到`undefined`.
+
+```js
+var { boots } = character
+console.log(boots)
+// <- undefined
+```
+
+深层的结构不存在的值（`null`或`undefined`）时，程序会抛出异常，这一点和你试图调用`null`或`undefined`的属性值时表现是一样的。
+
+```js
+var { boots: { size } } = character
+// <- Exception
+var { missing } = null
+// <- Exception
+```
+
+解构其实就是语法糖，如果转换为下面这样的语法，你肯定就能很清楚的明白为什么会抛出异常了。
+
+```js
+var nothing = null
+var missing = nothing.missing
+// <- Exception
+```
+
+回到解构，当属性值为`undefined`时，你可以给属性值添加默认值，属性值可以是数值，字符串，函数，对象，甚至指向其它变量：
+
+```js
+var { boots = { size: 10 } } = character
+console.log(boots)
+// <- { size: 10 }
+```
+
+对于嵌套解构，同样可以赋予默认值
+
+```js
+var { metadata: { enemy = 'Satan' } } = character
+console.log(enemy)
+// <- 'Satan'
+```
+
+默认值和别名也可以一起使用，需要注意的是你需要把别名放在前面，默认值放在后面：
+
+```js
+var { boots: footwear = { size: 10 } } = character
+```
+
+解构语法同样支持计算属性名，不过要这样使用，你需要用别名，这是因为计算属性名允许任何类似的表达式，这样会导致编译器无法识别变量名，看下面这个示例：
+
+```js
+var { ['boo' + 'ts']: characterBoots } = character
+console.log(characterBoots)
+// <- true
+```
+
+解构有时候作用也没那么大，连续语句`characterBoots = character[type]`通常看起来比`{ [type]: characterBoots } = character`更简单，这意味着在当你想要以对象字面量的形式声明属性时，对象解构才是有优势的。
+
+这就是在对象中使用解构的方法了，下面看看在数组中该如何使用。
+
+### 数组解构
+
+数组解构的语法和对象解构是类似的。下例中`coordinates`对象被解构为两个变量 `x,y`.值得注意的是，这里我们用的是中括号而非花括号，这表明这里是数组解构而非对象解构。通过数组解构你不需要使用`x = coordinates[0]`这样的语法了，通过解构不使用索引值，你也可以清楚的表达明白你的意思。
+
+```js
+var coordinates = [12, -7]
+var [x, y] = coordinates
+console.log(x)
+// <- 12
+```
+
+数组解构也允许你跳过你不想用到的值：
+
+```js
+var names = ['James', 'L.', 'Howlett']
+var [ firstName, , lastName ] = names
+console.log(lastName)
+// <- 'Howlett'
+```
+
+和对象解构一样，数组解构也允许你使用默认值：
+
+```js
+var names = ['James', 'L.']
+var [ firstName = 'John', , lastName = 'Doe' ] = names
+console.log(lastName)
+// <- 'Doe'
+```
+
+在ES5中，你想交换两个变量的值通常要用到第三个变量，如下所示：
+
+```js
+var left = 5
+var right = 7
+var aux = left
+left = right
+right = aux
+```
+
+使用解构，可以避免使用第三个变量`aux`,而是你专注于你的意图，
+
+```js
+var left = 5
+var right = 7
+[left, right] = [right, left]
+```
+
+关于解构，我们想要聊的最后一方面是关于函数的
+
+### 函数默认参数
+
+ES6中的函数也享受到了分配默认值带来的好处，下例中我们就给参数 `exponent`分配了一个默认值：
+
+```js
+function powerOf(base, exponent = 2) {
+  return Math.pow(base, exponent)
+}
+```
+
+箭头函数同样支持使用默认值，需要注意的是，就算只有一个参数，如果要赋予默认值，我们还是需要用小括号括起参数部分。
+
+```js
+var double = (input = 0) => input * 2
+```
+
+就像和一些其它语言一样，默认值不仅仅限于最右面的参数。你可以给任何位置的任何参数提供默认值。
+
+```js
+function sumOf(a = 1, b = 2, c = 3) {
+  return a + b + c
+}
+console.log(sumOf(undefined, undefined, 4))
+// <- 1 + 2 + 4 = 7
+```
+
+在JS中，给一个函数提供一个包含若干属性的对象字面量做为参数并不常见，不过你可以按下面这样的方式使用：
+
+```js
+var defaultOptions = { brand: 'Volkswagen', make: 1999 }
+function carFactory(options = defaultOptions) {
+  console.log(options.brand)
+  console.log(options.make)
+}
+carFactory()
+// <- 'Volkswagen'
+// <- 1999
+```
+
+不过这样也要一定的问题，就是如果你调用函数时传入的参数只包含一个属性，另一个属性的默认值会丢失：
+
+```js
+carFactory({ make: 2000 })
+// <- undefined
+// <- 2000
+```
+
+通过混合使用解构和函数默认值，我们可以解决这个问题。
+
+### 函数参数解构
+
+
+
+
+
+
+
+
+
 
 
 
