模板字符串&解构$剩余参数$拓展运算符
标记模板，为字符串的处理提供了新的思路。可以对字符串进行各种预处理

--- a/docs/第2章. ES6 概要.md
+++ b/docs/第2章. ES6 概要.md
@@ -595,7 +595,530 @@ carFactory({ make: 2000 })
 
 ### 函数参数解构
 
+一个比仅提供默认值更好的办法是完全解构`options`,为每一个属性提供默认值。解构模式还允许你不使用`options`对象而单独使用每一个值，不过这样你也失去了直接使用`options`对象的能力。这在某些情况下可能也会导致问题。
 
+```js
+function carFactory({ brand = 'Volkswagen', make = 1999 }) {
+  console.log(brand)
+  console.log(make)
+}
+carFactory({ make: 2000 })
+// <- 'Volkswagen'
+// <- 2000
+```
+
+在这种情况下，用户如果没有提供`options`对象，我们将又丢失默认值。这意味着如果没有提供`options`,`carFactory()`函数将抛出异常。这种问题可以通过下面这种语法来修复，这种语法添加了一个空数组作为`options`的默认值，这样在调用的时候如果参数为空，就会把空对象当做默认参数了，这样也能利用每一个默认的属性值。
+
+```js
+function carFactory({
+  brand = 'Volkswagen',
+  make = 1999
+} = {}) {
+  console.log(brand)
+  console.log(make)
+}
+carFactory()
+// <- 'Volkswagen'
+// <- 1999
+```
+
+除了默认值，你还可以在函数中使用解构来描述你的函数能够处理的对象，考虑下面的代码片段，这里我们有一个名为`car`的对象，这个对象拥有很多属性。`car`对象，描述了它的所有者，品牌，生产者，何时生产，以及所有者选择的参数。
+
+```js
+var car = {
+  owner: {
+    id: 'e2c3503a4181968c',
+    name: 'Donald Draper'
+  },
+  brand: 'Peugeot',
+  make: 2015,
+  model: '208',
+  preferences: {
+    airbags: true,
+    airconditioning: false,
+    color: 'red'
+  }
+}
+```
+
+如果我们想函数只处理这里面的部分属性，使用解构是个好办法。好处是，在读取函数的签名时，我们会意识到所需的所有属性。当我们完全使用解构时，很容易指出，何时输入会不满足函数的合同。下面的示例演示如何在参数列表中指定所需的每个属性，我们用`getCarProductModel` API来展示如何使用：
+
+```js
+var getCarProductModel = ({ brand, make, model }) => ({
+  sku: brand + ':' + make + ':' + model,
+  brand,
+  make,
+  model
+})
+getCarProductModel(car)
+```
+
+除了使用`options`对象填充，下面我们看看，解构还有什么好的用途。
+
+> 可以只利用一个对象中的部分参数，其实参数的解构通过把函数参数当做一个对象就可以比较容易的理解了。
+
+### 解构使用示例
+
+当一个函数想要返回数组或者对象时，使用解构能让转换显得更加简洁。下例中，函数`getCoordinates()`返回了一系列的值，但是我们只取用其中的一部分值`x,y`。这样我们避免了很多中间变量的使用，同样使得代码更具可读性。
+
+```js
+function getCoordinates() {
+  return { x: 10, y: 22, z: -1, type: '3d' }
+}
+var { x, y } = getCoordinates()
+```
+
+通过使用默认值，可以减少重复，比如你想写一个`random`函数，这个函数用以返回一个位于`min`和`max`之间的值。默认在1到10之间。这在如Python、C# 这类具有强类型特征的语言中作为命名参数的替代品特别有意思。这种模式允许为参数定义默认值并只覆盖部分值，这提供了极大的灵活性：
+
+```js
+function random({ min = 1, max = 10 } = {}) {
+  return Math.floor(Math.random() * (max - min)) + min
+}
+console.log(random())
+// <- 7
+console.log(random({ max: 24 }))
+// <- 18
+```
+
+正则表达式也非常适用于解构，解构允许你不用重新制定索引值就给一种匹配重命名。下面是一个`RegExp`的例子，这个例子允许你解析一些数据。这是一个允许你解析你的数据到它们各自组件的例子。结果数组中的第一个被保留为原生输入，这里我们可以舍弃它。（正则返回的是一个数组）
+
+```js
+function splitDate(date) {
+  var rdate = /(\d+).(\d+).(\d+)/
+  return rdate.exec(date)
+}
+var [ , year, month, day] = splitDate('2015-11-06')
+```
+
+当你的正则表达式不匹配时就需要小心了，这时候会返回`null`,为可能的失败提供测试是一种好的实践，如下代码所示：
+
+```js
+var matches = splitDate('2015-11-06')
+if (matches === null) {
+  return
+}
+var [, year, month, day] = matches
+```
+
+下面我们继续来讲讲`spread`和`rest`操作符。
+
+
+## 剩余参数和拓展符
+
+ES6之前，和任意数量的函数参数进行交互是很复杂的。你需要使用`arguments`,这是一个伪数组，拥有`length`属性。通常你需要通过`Array#slice.call`转换`arguments`对象为真实的数组后再进行操作,如下所示：
+
+```js
+function join() {
+  var list = Array.prototype.slice.call(arguments)
+  return list.join(', ')
+}
+join('first', 'second', 'third')
+// <- 'first, second, third'
+```
+
+对这种情况，ES6提供了一种更好的解决方案，这就是`rest`.
+
+### 剩余参数`rest`
+
+现在通过在任意JavaScript函数中的最后一个参数前添加三个点`...`，把它转换为特殊的`rest`参数。当`rest`参数是函数的唯一参数时，它就代表了传递给这个函数的所有参数。它和前面说到的`.slice`可以起到一样的作用，但是你可以避免使用类似`arguments`这样复杂的构造了，并且在参数列表中就可以直接指定了。
+
+```js
+function join(...list) {
+  return list.join(', ')
+}
+join('first', 'second', 'third')
+// <- 'first, second, third'
+```
+
+`rest`参数之前的命名参数不会被包含在`rest`参数中，
+
+```js
+function join(separator, ...list) {
+  return list.join(separator)
+}
+join('; ', 'first', 'second', 'third')
+// <- 'first; second; third'
+```
+
+不过需要注意的是，在箭头函数中使用`rest`参数时，即使只有这一个参数，也需要使用圆括号把它围起来，不然就会报错`SyntaxError`，下面是一个结合使用二者的例子：
+
+```js
+var sumAll = (...numbers) => numbers.reduce(
+  (total, next) => total + next
+)
+console.log(sumAll(1, 2, 5))
+// <- 8
+```
+
+对比具有相同功能的ES5代码，这样更加复杂但是却更紧凑了。`sumAll`函数对不熟悉使用`.reduce`方法的读者来说可能更具有迷惑性，同样由于使用了两重的箭头函数也是的复杂性增加。这需要我们有所权衡，关于这一点，我们会在本书的第二部分讲述。
+
+```js
+// ES5的写法
+function sumAll() {
+  var numbers = Array.prototype.slice.call(arguments)
+  return numbers.reduce(function (total, next) {
+    return total + next
+  })
+}
+console.log(sumAll(1, 2, 5))
+// <- 8
+```
+
+### 拓展运算符
+
+拓展运算符可以把任意可枚举对象转换为数组，拓展可以高效对拓展目标对象如数组字面量或函数调用进行操作。下例中使用`...arguments`转换了一个函数的参数为数组字面量。
+
+```js
+function cast() {
+  return [...arguments]
+}
+cast('a', 'b', 'c')
+// <- ['a', 'b', 'c']
+```
+
+使用拓展运算符，我们还可以很方便的把一段字符串转换为由每一个字母组成的数组：
+
+```js
+[...'show me']
+// <- ['s', 'h', 'o', 'w', ' ', 'm', 'e']
+```
+
+你还可以在拓展运算符左右添加其他参数，已获得你想要的结构:
+
+```js
+function cast() {
+  return ['left', ...arguments, 'right']
+}
+cast('a', 'b', 'c')
+// <- ['left', 'a', 'b', 'c', 'right']
+```
+
+在合并多个数组时，拓展运算符也是非常有用的，下例展示了如何使用拓展拼合多个数组为一个数组字面量：
+
+```js
+var all = [1, ...[2, 3], 4, ...[5], 6, 7]
+console.log(all)
+// <- [1, 2, 3, 4, 5, 6, 7]
+```
+
+值得注意的是，拓展运算符不仅仅可以运用于数组和`arguments`对象，它对任意可迭代的对象都可以使用。迭代也是ES6新提出的一个概念，它允许你转换任意对象为可迭代的。在[ Iteration and Flow Control]()这一章，我们将详细叙述这个概念。
+
+
+#### Shifting和Spreading
+> 拓展知识
+
+当你想要抽出一个数组的前一个或者两个元素时，常用的解决方案是使用`.shift`.尽管是函数式的，下述代码在第一次看到的时候却不好理解，因为我们使用了两次`.slice`从`list`中抽离出两个不同的元素。重点是，像很多ES6之前的解决方案，我们应该让语言来解决我们遇到的这些问题。
+
+```js
+var list = ['a', 'b', 'c', 'd', 'e']
+var first = list.shift()
+var second = list.shift()
+console.log(first)
+// <- 'a'
+```
+
+在ES6中，你可以结合使用拓展和解构，下面的代码和上述代码具有一样的功能，不过只用一行代码就解决了上述的问题，二者这一行代码比之前使用`list.slice()`更具有可读性：
+
+```js
+var [first, second, ...other] = ['a', 'b', 'c', 'd', 'e']
+console.log(other)
+// <- ['c', 'd', 'e']
+```
+
+使用拓展运算符，你可以专注于实现你需要的功能，让语言做别的事情。在提高表述性和描述性的同时降低语言的限制在ES6中很常见。
+
+在ES6之前，当你需要一个动态的参数列表，并应用到某个函数调用时，你需要使用`.apply`。这其实是不雅的，因为这设计到改变`this`的上下文，你在这时候很容易疏忽。
+
+```js
+fn.apply(null, ['a', 'b', 'c'])
+```
+
+除了对数组进行拓展，你同样可以对函数调用进行拓展，下例展示了如何添加任意数量的参数到`multiply`函数中。
+
+```js
+function multiply(left, right) {
+  return left * right
+}
+var result = multiply(...[2, 3])
+console.log(result)
+// <- 6
+```
+
+想在数组中一样，对函数参数使用拓展运算符可以结合常规的参数一起使用。下例中，`print`函数结合使用了`rest`,普通参数，和拓展,这的确让我们的代码更加简洁又不至于稀释：
+
+```js
+function print(...list) {
+  console.log(list)
+}
+print(1, ...[2, 3], 4, ...[5])
+// <- [1, 2, 3, 4, 5]
+```
+
+使用`.apply`的另外一个限制是，当使用关键字`new`实例化一个对象时，会非常啰嗦。下面是一个结合`new`,`apply`来创建一个`Date`对象的示例，如果不考虑JS中的月份是从0开始计算的，11会被解析为十二月份，只是为了创建一个Date实例，下面这样的语句真的显得太麻烦了：
+
+```js
+new (Date.bind.apply(Date, [null, 2015, 11, 31]))
+// <- Thu Dec 31 2015
+```
+
+再看下面这段代码，拓展运算符去除了一切冗余的东西，只剩下重要的东西，只使用`new`创建新实例，使用`...`创建了一个动态的数组，然后调用Date函数，这就足够了：
+
+```js
+// 关于解构是如何绑定的this,语法糖是如何工作的，还是存在一些不太明白的地方
+new Date(...[2015, 11, 31])
+// <- Thu Dec 31 2015
+```
+
+下表总结了，我们是如何使用拓展运算符的：
+
+| 使用示例 | ES5 | ES6 |
+| --- | --- | --- |
+| Concatenation | `[1, 2].concat(more)` | `[1, 2, ...more]` |
+| Push an array onto list | `list.push.apply(list, items)` | `list.push(...items)` |
+| Destructuring | `a = list[0], other = list.slice(1)` | `<span class="Apple-tab-span" style="white-space: pre;"> </span>[a, ...other] = list` |
+| `new` and `apply` | `new (Date.bind.apply(Date, [null,2015,31,8]))` | `new Date(...[2015,31,8])` |
+
+
+## 模板字符串
+
+模板字符串是对常规`JavaScript`字符串的重大改进，不同于在普通字符串中使用单引号或者双引号，模板字符串的声明需要使用反撇号，如下所示：
+
+```js
+var text = `This is my first template literal`
+```
+
+因为应用反撇号，现在你可以在字符串中随意使用单双引号了，而不用考虑转义，如下：
+
+```js
+var text = `I'm "amazed" at these opportunities!`
+```
+
+模板字符串的强大功能之一是可以在其中插入JavaScript表达式
+
+### 在字符串中插值
+
+通过模板字符串，你可以在模板中插入任何JavaScript表达式了。当解析到表达式时，表达式会被执行，你将获得表达式的结果，下例中，我们在字符串中插入了变量`name`：
+
+```js
+var name = 'Shannon'
+var text = `Hello, ${ name }!`
+console.log(text)
+// <- 'Hello, Shannon!'
+```
+
+不仅仅是插入变量哦，在模板字符串中你可以插入任何表达式。你可以把模板字面量中的每一个表达式都看做一个变量，然后集中于每个字符串和其它变量。不过，代码会变得更加容易维护，因为它不需要手动连接字符串和JavaScript表达式了。不过你需要保证，你的表达式中使用的变量，调用的函数在当前作用域中都是可用的。
+
+你可以依据你自己的编码风格，来确定插入多少表达式。下面的代码中，实例化了一个`Date`对象，并把它格式化为了人类可读的格式。
+
+```js
+`The time and date is ${ new Date().toLocaleString() }.`
+// <- 'the time and date is 8/26/2015, 3:15:20 PM'
+```
+
+你也可以使用数学运算符：
+
+```js
+`The result of 2+3 equals ${ 2 + 3 }`
+// <- 'The result of 2+3 equals 5'
+```
+
+你甚至可用嵌套使用模板字面量，因为它们其实也是JavaScript表达式;
+
+```js
+`This template literal ${ `is ${ 'nested' }` }!`
+// <- 'This template literal is nested!'
+```
+
+模板字符串的另外一个优点是支持多行字符串;
+
+### 多行文本模板
+
+在ES6之前，如果你想表现多行字符串，你需要使用转义，数组拼合，甚至使用使用注释符做复杂的hacks.如下所示：
+
+```js
+var escaped =
+'The first line\n\
+A second line\n\
+Then a third line'
+
+var concatenated =
+'The first line\n' `
+'A second line\n' `
+'Then a third line'
+
+var joined = [
+'The first line',
+'A second line',
+'Then a third line'
+].join('\n')
+```
+
+应用ES6，这种处理就简单多了，模板字符串默认支持多行，比起上面那些方法简单多了：
+
+```js
+var multiline =
+`The first line
+A second line
+Then a third line`
+```
+
+当你需要，在你需要在一块`html`中插入变量信息，或者你需要在模板中展示一个列表，你可以迭代这个列表，通过相应的markup遍历，然后通过表达式返回结果。模板字符串是非常有用的，如下所示，你可以在你的模板中声明子组件。
+
+```js
+var book = {
+  title: 'Modular ES6',
+  excerpt: 'Here goes some properly sanitized HTML',
+  tags: ['es6', 'template-literals', 'es6-in-depth']
+}
+var html = `<article>
+  <header>
+    <h1>${ book.title }</h1>
+  </header>
+  <section>${ book.excerpt }</section>
+  <footer>
+    <ul>
+      ${
+        book.tags
+          .map(tag => `<li>${ tag }</li>`)
+          .join('\n      ')
+      }
+    </ul>
+  </footer>
+</article>`
+```
+
+上述代码将得到下面这样的结果。值得注意的是你的空格得以保留，多个`li`也让我们的预期得以合适的渲染：
+
+```js
+<article>
+  <header>
+    <h1>Modular ES6</h1>
+  </header>
+  <section>Here goes some properly sanitized HTML</section>
+  <footer>
+    <ul>
+      <li>es6</li>
+      <li>template-literals</li>
+      <li>es6-in-depth</li>
+    </ul>
+  </footer>
+</article>
+```
+
+多行模板字符串的一个副作用是它的缩进，下例展示了在函数中使用包含缩进的模板字符串，可能我们希望结果没有缩进，但是结果却有四格的缩进。
+
+```js
+function getParagraph() {
+  return `
+    Dear Rod,
+
+    This is a template literal string that's indented
+    four spaces. However, you may have expected for it
+    to be not indented at all.
+
+    Nico
+  `
+}
+```
+
+尽管不完美，我们可以用下面这个功能函数去除结果中的每一行的缩进：
+
+```js
+function unindent(text) {
+  return text
+    .split('\n')
+    .map(line => line.slice(4))
+    .join('\n')
+    .trim()
+}
+```
+
+有时候，在插入模板之前预处理插入表达式的结果是一个好的主意。对于这些高阶应用，我们可能需要用到被称为标记模板的模板字符串新特性。
+
+### 标记模板
+
+默认情况下，JavaScript会把`\`解析为转义符号，具有这些符号的字符一般都有特殊的含义。比如说`\n`被解析为新行，`\u00f1`被解析为`ñ`等等。如果你不想被特殊解析，你也可以使用`String.raw`来标记模板。下面的代码片段只是了如何在使用`String.row`处理模板字符串，这里面的`\n`没有被解析为新行。
+
+```js
+var text = String.raw`"\n" is taken literally.
+It'll be escaped instead of interpreted.`
+console.log(text)
+// "\n" is taken literally.
+// It'll be escaped instead of interpreted.
+```
+
+我们添加在模板字符串之前的`String.raw`前缀就是标记模板，它被用以渲染模板，标记模板的参数可以是一组由静态部分模板构成的数组，也可以是各具结果的表达式，每个表达式有自己的参数。
+
+一个典型的标签模板字符串如下：
+
+```js
+tag`Hello, ${ name }. I am ${ emotion } to meet you!`
+```
+
+时间上，上面标签模板会被转换为一下函数调用：
+
+```js
+tag(
+  ['Hello, ', '. I am ', ' to meet you!'],
+  'Maurice',
+  'thrilled'
+)
+```
+
+生成的字符串是通过获取模板的每个部分并在其旁边放置一个表达式生成的，直到模板中没有更多的部分为止。不过不实际使用，可能很难理解这些概念。下面我们实际使用看看。
+
+下述代码对`tag`进行了简单的描述，它提供了模板与字符串类似的功能，但是实际上并没有使用标记模板。它使用`reduce`把`parts`数组转换为单一值，即模板字符串的计算结果。结果通过第一个`part`初始化，然后其它的`part`都通过`values`处理，在这里我们对`...values`应用了`rest`参数，目的是便于评估模板中每个表达式的结果，我们使用了具有函数返回值的箭头函数，这使得表达非常的简洁：
+
+```js
+function tag(parts, ...values) {
+  return parts.reduce(
+    (all, part, index) => all + values[index - 1] + part
+  )
+}
+```
+
+你可以像下面这样使用标记模板，不过你会发现结果和不使用标记模板是一样的，这是因为这里我们并没有做额外的处理。
+
+```js
+var name = 'Maurice'
+var emotion = 'thrilled'
+var text = tag`Hello, ${ name }. I am ${ emotion } to meet you!`
+console.log(text)
+// <- 'Hello Maurice, I am thrilled to meet you!'
+```
+
+标记模板还有很多别的用途，其中之一是转换用户输入值为大写，下面这个标记可以做这件事。我们先定义一个标记函数：
+
+```js
+function upper(parts, ...values) {
+  return parts.reduce((all, part, index) =>
+    all + values[index - 1].toUpperCase() + part
+  )
+}
+var name = 'Maurice'
+var emotion = 'thrilled'
+upper`Hello, ${ name }. I am ${ emotion } to meet you!`
+// <- 'Hello MAURICE, I am THRILLED to meet you!'
+```
+
+一个更加有用的使用是通过标记模板对对模板中的表达式进行过滤处理，现在有这么一个场景，所有的输入都来自于用户，我们可以通过使用假想的`sanitize`库来去除用户输入中的html等危险标签，这可以有效的防止XSS攻击。
+
+```js
+function sanitized(parts, ...values) {
+  return parts.reduce((all, part, index) =>
+    all + sanitize(values[index - 1]) + part
+  )
+}
+var comment = 'Evil comment<iframe src="http://evil.corp">
+    </iframe>'
+var html = sanitized`<div>${ comment }</div>`
+console.log(html)
+// <- '<div>Evil comment</div>'
+```
+
+上面代码中的`iframe`差点就让破坏我们的网站了。ES6中的另外一个大的改变是提供了`let`和`const`声明。下面我们一起来学习。
+
+## `let` & `const` 声明
 
 
 
