第二章 初稿翻译完成
const 定义的值并非不可改变，而是引用不可变，值还是可变的。

--- a/docs/第2章. ES6 概要.md
+++ b/docs/第2章. ES6 概要.md
@@ -1120,12 +1120,286 @@ console.log(html)
 
 ## `let` & `const` 声明
 
+`let`语法是ES6中广为人知的特性之一了。它用起来像`var`但是，却有不同的作用域规则。
+
+涉及到作用域，JavaScript有一套复杂的规则，第一次接触的人常常会因想弄明白变量如何工作而崩溃。最终，你发现了变量提升，JS语句才开始变得有意义。变量提升意味着变量从任何被声明的地方提升到当前作用域的顶部被声明。比如，看下面的这个例子：
+
+```js
+function isItTwo(value) {
+  if (value === 2) {
+    var two = true
+  }
+  return two
+}
+isItTwo(2)
+// <- true
+isItTwo('two')
+// <- undefined
+```
+
+上述的JS代码是可以工作的，尽管`two`是在代码分支中被声明，之后被外部分支引用。造成这种现象的原因是因为`var`被绑定到了函数或者全局的作用域。上述代码，由于声明提升，被解析后其实和下面代码的效果是一样的
+
+```js
+function isItTwo(value) {
+  var two
+  if (value === 2) {
+    two = true
+  }
+  return two
+}
+```
+
+无论我们时候喜欢，变量提升比块作用域变量更加具有迷惑性。块作用域在花括号范围内生效，而不是函数范围内。
+
+### 块作用域和`let` 声明
+
+不同于函数作用域，如果我们想要更深的作用域，块作用域允许你通过`if`,`for`,`while`声明创建新作用域，你甚至还可以任意创建`{}`块.你可能也知道，JavaScript允许我们创建任意数量的块：
+
+```js
+{{{{{ var deep = 'This is available from outer scope.'; }}}}}
+console.log(deep)
+// <- 'This is available from outer scope.'
+```
+
+使用`var`，由于变量提升的存在，我们依旧可以读取到深层中的`deep`变量，并不会报错。但是在满足以下情况下，我们可能希望这里会报错：
+
+- 访问内部变量打破了我们代码中的某种封装原则
+- 内部变量根本不属于外部范围。
+- 该块有很多兄弟变量，使用相同的名称
+- 父块中已有有一个一个同名变量，但是内部也需要用同名变量；
+
+`let`声明，在这时候就可以用以替代`var`了，`let`遵循块作用域规则而不是函数作用域规则，在函数作用域中，想要创建深层作用域的唯一办法就是再新建一个函数了。但是通过`let`，你只需添加另外一对`{}`，这意味着你无须为了新建一层作用域而新建函数。
+
+```js
+let topmost = {}
+{
+  let inner = {}
+  {
+    let innermost = {}
+  }
+  // attempts to access innermost here would throw
+}
+// attempts to access inner here would throw
+// attempts to access innermost here would throw
+```
+
+在`for`循环中使用`let`是一个很好的实践，这样定义的变量只会在当前作用域内生效。
+
+```js
+for (let i = 0; i < 2; i++) {
+  console.log(i)
+  // <- 0
+  // <- 1
+}
+console.log(i)
+// <- i is not defined
+```
+
+考虑到`let`声明的变量在每一次循环的过程中都会声明，这在处理异步函数时就很有效了，不会发生使用`var`时的那些诡异的事情，我们看一个具体的例子。
+
+首先，我们看看一个典型的`var`作用域是怎么工作的，`i`被绑定在`printNumber`函数中，当每个回调函数被调用时，它的值会一直升到10，但是当每个回调函数运行时（每100us）,i的值已经是10了，因此每次打印的结果都是10.
+
+```js
+function printNumbers() {
+  for (var i = 0; i < 10; i++) {
+    setTimeout(function () {
+      console.log(i)
+    }, i * 100)
+  }
+}
+printNumbers()
+```
+
+使用`let`,则会把`i`绑定到每一个作用域中。虽然每一步,`i`的值还是在增加，但是每次循环其实都是创建了一个新的`i`，他们不会相互影响，因此打印出的就是预想的0到9了。
+
+```js
+function printNumbers() {
+  for (let i = 0; i < 10; i++) {
+    setTimeout(function () {
+      console.log(i)
+    }, i * 100)
+  }
+}
+printNumbers()
+```
+
+关于`let`还需要考虑的是另外一个名为`Temporal Dead Zone`的概念
+
+### Temporal Dead Zone
+
+简言之，如果你的代码类似下面这样，就会报错。当执行到了一个作用域，在`let`声明之前调用了`let`声明的变量。这就是Temporal Dead Zone（TDZ）。
+
+```js
+{
+  console.log(name)
+  // <- ReferenceError: name is not defined
+  let name = 'Stephen Hawking'
+}
+```
+
+如果定义的是一个函数，函数中引用了`name`变量则是可以的。只要该函数的执行在定义之后就可以。如果函数执行时发生在`let`声明之前，同样会导致TDZ。
+
+```js
+// 不会报错
+function readName() {
+  return name
+}
+let name = 'Stephen Hawking'
+console.log(readName())
+// <- 'Stephen Hawking'
+```
 
 
+```js
+// 会报错
+function readName() {
+  return name
+}
+console.log(readName())
+// ReferenceError: name is not defined
+let name = 'Stephen Hawking'
+```
 
 
+考虑到这些例子并未改变`name`值，下面的代码也会报错，原因也是由于它试图在声明前访问一个被`let`定义的变量
+
+```js
+function readName() {
+  return name
+}
+console.log(readName())
+// ReferenceError: name is not defined
+let name
+```
+
+下面的代码则是可行的：
+
+```js
+function readName() {
+  return name
+}
+let name
+console.log(readName())
+// <- undefined
+```
+
+只有在声明之后调用函数就不会有问题。
+
+TDZ的存在使得错误更容易发生，这在ES6之前的代码中由于编码提升和不好的编码习惯是常见的问题。在ES6中则可以比较好的避免了，要记住`let`同样存在声明提升。这意味着，变量会在我们进入块作用域时就会创建，TDZ也是在这时候创建的，只是在代码之前到真正的`let`声明所在位置时，变量是不可访问的。这时候TDZ才会消失，并允许访问变量。
 
 
+### Const 声明
+
+`const`声明也具有类似`let`的块作用域，它同样具有`TDZ`机制。实际上，就是因为有了`Const`才有了TDZ机制，稍后TDZ才被应用到`let`声明中。`const`需要TDZ的原因是为了防止由于变量提升，在到达`const`语句之前就对对应变量赋值，这样就出错了。TDZ机制就是针对这种场景提出的一种解决方案，使得变量之后在`const`语句之后才可用。受益于`TDZ`,其它特性的实现也变得相对容易。
+
+下面的代码表明，`const`具有和`let`一致的作用域
+
+```js
+const pi = 3.1415
+{
+  const pi = 6
+  console.log(pi)
+  // <- 6
+}
+console.log(pi)
+// <- 3.1415
+```
+
+下面我们说说`const`和`let`的主要区别，首先`const`声明的变量在声明时必须赋值,否则会报错：
+
+```js
+const pi = 3.1415
+const e // SyntaxError, missing initializer
+```
+
+除了必须初始化，被`const`声明的变量不能再被赋予别的值。一旦被声明，它的值就不可变了，在严格模式下，试图改变`const`声明的变量会直接报错，在非严格模式下，改变被静默被忽略。
+
+```js
+const people = ['Tesla', 'Musk']
+people = []
+console.log(people)
+// <- ['Tesla', 'Musk']
+```
+
+请注意，创建了一个`const`变量并非意味着所分配的值是不可变的。这常常被大众所误解，所以非常推荐你阅读下面这段声明。
+
+
+#### 通过const声明的变量并非不可改变
+
+使用`const`只是意味着，变量将始终指向相同的对象或初始的值。这种引用是不可变的。但是值并不不可变。
+
+下面的例子说明，虽然`people`的指向不可变，但是数组本身是可以被修改的。如果数组本身不可修改，下面的情况就不会发生了
+
+```js
+const people = ['Tesla', 'Musk']
+people.push('Berners-Lee')
+console.log(people)
+// <- ['Tesla', 'Musk', 'Berners-Lee']
+```
+
+`const`只是组织了变量引用另外一个值，另一个解释这一点的是下面这个例子，尽管我们使用`const`声明了`people`,然后把它赋值给了`humans`,我们还是可以改变`humans`的指向，因为`humans`不是有`const`声明的。`people`是有`const`声明的，则不可改变。
+
+```js
+const people = ['Tesla', 'Musk']
+var humans = people
+humans = 'evil'
+console.log(humans)
+// <- 'evil'
+```
+
+如果我们的目的是让值不可修改，我们需要借助函数的帮助，比如`Object.freeze`。使用了`Object.freeze`之后的对象就不能再修改了
+
+```js
+const frozen = Object.freeze(
+  ['Ice', 'Icicle', 'Ice cube']
+)
+frozen.push('Water')
+// Uncaught TypeError: Can't add property 3
+// object is not extensible
+```
+
+下面我们详细讨论一下`const`和`let`的优点
+
+### `const`和`let`的优点
+
+新功能并不应该因为是新功能而被使用，ES6语法被使用的前提是它可以显著的提升我们代码的可读写和可维护性。`let`声明在大多数情况下，可以替换`var`以避免预期之外的问题。使用`let`你可以把声明放在块的顶部而不需要放在函数的顶部了，这防止了代码提示带来的潜在问题。
+
+使用`const`声明是一种防止问题的很好的方法。下述代码在`checklist`函数外给`items`变量传递引用时就非常容易出错，它返回的`todo` API又和`items`有了交互。当`items`变量被改为指向另外一个列表时，我们的代码就出问题了。`todo` API 用的还是`items`之前的值，`items`本身的指代则已经改变。
+
+```js
+var items = ['a', 'b', 'c']
+var todo = checklist(items)
+todo.check()
+console.log(items)
+// <- ['b', 'c']
+items = ['d', 'e']
+todo.check()
+console.log(items)
+// <- ['d', 'e'], would be ['c'] if items had been constant
+function checklist(items) {
+  return {
+    check: () => items.shift()
+  }
+}
+```
+
+这类问题很难debug，找到问题可能会花费你很长一段时间。`const`在运行时报错使得你可以避免这种问题，有助于你定位问题所在。
+
+使用`const`声明的另一个好处是可以快速识别为分配值的变量，`const`暗示这个变量是只读的，当我们读代码时，就少了一件该担心的事情。
+
+如果我们默认只使用`cosnt`和`let`声明变量，所有的变量都会有一样的作用域规则，这让代码更易理解，`const`有时候被提议作为默认变量声明的形式是因为其影响最小。`const`不允许重新分配值，使用块作用域，存在TDZ（未声明前不可使用）。`let`则允许重新分配值，其它方面和`const`类似，所以很自然的，如果我们想要使用可改变值的变量，我们应该使用`let`.
+
+另一方面，`var`声明就不那么好用了，因为它使用函数作用域，可以重新分配至，可以在未声明前调用，因此`var`声明是次于`const`和`let`的，因此在现代JavaScript中相比`let`和`const`是不那么推荐使用的。
+
+本书后续内容中，我们会默认使用`const`，当需要再分配值时，我们会使用`let`,关于为何这样做，你可以阅读[ Practical Considerations]()这一节。
+
+### 参考
+
+1. Like polyfills, ponyfills are user-land implementations of features that aren’t available in every JavaScript runtime. While polyfills try to patch the runtime environment so that it behaves as if the feature was indeed available on the runtime, ponyfills implement the missing functionality as standalone modules that don’t pollute the runtime environment. This has the benefit of not breaking expectations third-party libraries (that don’t know about your polyfill) may have about the environment.
+
+2. Labels are used as a way of identifying instructions. Labels can be used by goto statements, to indicate what instruction we should jump to; break statements, to indicate the sequence we want to break out of; and continue statements, to indicate the sequence we want to advance.
+
+3. When using multiline template literals, spacing isn’t preserved automatically. However, in many cases we can provide just enough indentation to make it work. Be wary of indented code blocks that may result in undesired indentation due to our code block being nested.
 
 
 
